--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,3 +16,5 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag jacqueskang/node-red:latest
+    - name: Push the Docker image
+      run: docker push jacqueskang/node-red:latest
